[gd_scene load_steps=5 format=3 uid="uid://bq0om0c7cajw3"]

[ext_resource type="Script" path="res://Scenes/score.gd" id="1_a72lq"]
[ext_resource type="FontFile" uid="uid://dyn3yp6ol6py" path="res://Sprites/Font/clacon2.ttf" id="2_44x8t"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uhw4g"]
bg_color = Color(0.172549, 0, 0.0117647, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p3hy5"]
bg_color = Color(0.988235, 0, 0.133333, 1)

[node name="Score" type="CanvasLayer"]
script = ExtResource("1_a72lq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Score" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_44x8t")
theme_override_font_sizes/font_size = 75
text = "Score:"

[node name="Time" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_44x8t")
theme_override_font_sizes/font_size = 50
text = "Time:"

[node name="Lives" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_44x8t")
theme_override_font_sizes/font_size = 50
text = "Lives:"

[node name="RemainBar" type="ProgressBar" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_fonts/font = ExtResource("2_44x8t")
theme_override_font_sizes/font_size = 25
theme_override_styles/background = SubResource("StyleBoxFlat_uhw4g")
theme_override_styles/fill = SubResource("StyleBoxFlat_p3hy5")
max_value = 30.0
step = 1.0

[node name="ElepsedTime" type="Timer" parent="."]

[connection signal="timeout" from="ElepsedTime" to="." method="_on_timer_timeout"]
